Feat: Hover, quickChanges and setTimeout in choicesOfPPT.foreach

--- a/Juego de piedra papel tijeras/style.css
+++ b/Juego de piedra papel tijeras/style.css
@@ -94,8 +94,14 @@ img {
 
 }
 
-#userChoice > img {
+#userChoice  img {
     display: inline;
+    transition: all 300ms;
+   
+}
+
+#userChoice  img:hover {
+    transform: scale(1.10);
    
 }
 
